# slipperystream

./: CLAUDE.md  Cargo.toml  MANIFEST.md  NOTICE  README.md  STATE.md
assets/collision/: m3_collision.json
assets/scenes/: m2_scene.json  m4_scene.json
assets/scripts/: controller.lua
assets/tests/: m3_replay_input.json
crates/sme_atlas_packer/: Cargo.toml
crates/sme_atlas_packer/src/: main.rs
crates/sme_core/: Cargo.toml
crates/sme_core/src/: animation.rs  input.rs  lib.rs  tier.rs  time.rs
crates/sme_devtools/: Cargo.toml
crates/sme_devtools/src/: debug_overlay.rs  lib.rs
crates/sme_game/: Cargo.toml
crates/sme_game/src/: animation.rs  atlas.rs  collision.rs  controller.rs  lua_bridge.rs  main.rs  replay.rs  scene.rs
crates/sme_platform/: Cargo.toml
crates/sme_platform/src/: lib.rs  window.rs
crates/sme_render/: Cargo.toml
crates/sme_render/src/: camera.rs  gpu_context.rs  lib.rs  sprite_pipeline.rs  texture.rs  vertex.rs
docs/planning/: architecture_sketch.md  asset_formats_v0.1.md  code_review_m4.md  engine_identity.md  grim_delivery_gdd.md  hot_reload_guide.md  implementation_decisions.md  lua_gameplay_plan.md  producer_review.md  scope.md
docs/setup/: requirements.md  web_build.md
examples/grim_delivery/: .gitignore  Cargo.toml  README.md  index.html
examples/grim_delivery/src/: game.rs  hud.rs  level.rs  main.rs
scripts/: install_requirements.ps1
slipstream/: MANIFEST.template.md  README.md  SETUP.md
slipstream/core/: capabilities.md
slipstream/core/constitution/: BASE_CONSTITUTION.md
slipstream/core/skills/: deep_researcher.md  plan_check.md  planning_and_scoping.md  requirements_clarification.md  security_review.md
slipstream/deploy/api/engine/: README.md
slipstream/deploy/claude-code/: README.md  hooks.example.json
slipstream/deploy/claude-project/: README.md
slipstream/factory/: constitution_author.md  persona_author.md  skill_author.md
slipstream/packs/gamedev/constitution/roles/: game_designer_constitution.md  gameplay_engineer_constitution.md  producer_constitution.md
slipstream/packs/gamedev/personas/: game_designer.md  gameplay_engineer.md  producer.md
slipstream/packs/gamedev/skills/: balance_tuning.md
tools/: color_key.py
