[workspace]
resolver = "2"
default-members = ["crates/sme_game"]
members = [
    "crates/sme_platform",
    "crates/sme_core",
    "crates/sme_render",
    "crates/sme_devtools",
    "crates/sme_game",
    "crates/sme_atlas_packer",
    "examples/grim_delivery",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
winit = "0.30"
wgpu = { version = "24", features = ["wgsl", "dx12", "webgl"] }
egui = "0.31"
egui-wgpu = "0.31"
# default-features off: the default `clipboard` feature pulls in arboard,
# which does not compile on wasm32. Costs copy/paste in egui text fields.
egui-winit = { version = "0.31", default-features = false }
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
sha2 = "0.10"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
# Web (wasm32) support
web-time = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = "0.3"
