[package]
name = "sme_devtools"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
sme_core = { path = "../sme_core" }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
